--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
-# This is a basic workflow to check code quality with pylint
+# This is a basic workflow to help you get started with Actions
 
-name: Lint
+name: test
 
-# Controls when the action will run.
+# Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -31,7 +31,8 @@ jobs:
       - name: Install Requirements
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
-      - name: Run Pylint
+          pip install -r requirements.txt
+          pip install pytest
+      - name: Run Pytest
         run: |
-            pylint ./* --fail-under 2
+            pytest tests/test.py
