--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1.2.0
         with:
-          python_ver: '3.8'
-          spec: 'main.spec'
-          requirements: 'requirements.txt'
-          upload_exe_with_name: 'PyMonitor'
+          python_ver: 3.8
+          spec: main.spec
+          requirements: requirements.txt
+          upload_exe_with_name: PyMonitor
