--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,16 +8,27 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-    - name: Package Application
-      uses: JackMcKew/pyinstaller-action-linux@main
+    - name: Install Python
+      uses: actions/setup-python@v4
       with:
-        path: .
+        python-version: '3.8'
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: pyMonitor
-        path: src/dist/linux
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Mockup pyInstaller execution
+      run: |
+        touch pyMonitor
+        
+    - name: Upload pyMonitor executable
+        uses: actions/upload-artifact@v3
+        with:
+          name: pyMonitor
+          path: .
+
