Correct syntax error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,8 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Mockup pyInstaller execution
-      run: |
-        touch pyMonitor
-        
+      run: touch pyMonitor
+
     - name: Upload pyMonitor executable
         uses: actions/upload-artifact@v3
         with:
