--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Run pyInstaller
+      run: pyinstaller pyMonitor.spec
+
+    - name: Upload executable
+        uses: actions/upload-artifact@v3
+        with:
+          name: pyMonitor
+          path: dist/pyMonitor
