--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run pyInstaller
-      run: pyinstaller pyMonitor.spec
+      run: |
+        ls -la .
+        pyinstaller pyMonitor.spec
 
