--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,14 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run pyInstaller
-      run: |
-        ls -la .
-        pyinstaller pyMonitor.spec
+    - name: Mockup pyInstaller
+      run: touch ./pyMonitor
+
+    - name: Upload pyInstaller build
+      uses: actions/upload-artifact@v3
+      with:
+        name: pyMonitor
+        path: ./pyMonitor
+
+
 
