--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,9 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Mockup pyInstaller
-      run: touch ./pyMonitor
+      run: |
+        touch ./pyMonitor
+        echo "Hello World" > ./pyMonitor
 
     - name: Upload pyInstaller build
       uses: actions/upload-artifact@v3
